[package]
name = "strava-staatz"
version = "0.1.0"
edition = "2021"
authors = ["Dylan Staatz <dylanstaatz@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
csv = "1.1.6"
anyhow = "1.0.68"
chrono = "0.4.23"
